# libmedio

./: .cvsignore  CMakeLists.txt  ChangeLog  Makefile  Makefile.in  README  README.md  TODO  configure
.gitea/workflows/: ci.yaml
.github/: copilot-instructions.md
2.6.1/: AUTHORS  Makefile.in
2.6.1/m4/: Makefile.in  acinclude.m4
2.6.1/src/: CMedIO.h  CMedIOData.cpp  CMedIOData.h  CMedIODataFactory.cpp  CMedIODataFactory.h  CMedIOHeader.cpp  CMedIOHeader.h
cmake/: FindCOREG.cmake  FindQt5.cmake  FindRTDEBUG.cmake  Findrtdebug.cmake
conda.recipe/: README.md  build.sh  meta.yaml
examples/ecat/ecatutil/: CMakeLists.txt  ecatutil.cpp  ecatutil.pro
examples/image2ecat/: CMakeLists.txt  COptions.cpp  COptions.h  image2ecat.pro  main.cpp
examples/image2ecat/includes/: config.h.in
examples/img2ecat/: CApplication.cpp  CApplication.h  CDataArray.h  CMakeLists.txt  Makefile.in  configure  img2ecat.cpp
examples/img2ecat/includes/: config.h.in
examples/img2ecat/m4/: Makefile.in  acinclude.m4  configure.in
examples/img2ecat/src/: CApplication.cpp  CApplication.h  CDataArray.h  CMakeLists.txt  img2ecat.cpp  img2ecat.pro.in
examples/mp2ecat/: .cvsignore  CMakeLists.txt  ChangeLog  Makefile.in  configure  mp2ecat.cpp  mp2ecat.pro
examples/mp2ecat/includes/: config.h.in
examples/mp2ecat/m4/: Makefile.in  acinclude.m4  configure.in
examples/mp2ecat/src/: CApplication.cpp  CApplication.h  CDataArray.h  mp2ecat.cpp  mp2ecat.pro.in
examples/mp2ecat/src/includes/: config.h.in
examples/mp2ecat/trunk/: .cvsignore  ChangeLog  Makefile.in  configure
examples/mp2ecat/trunk/m4/: .cvsignore  Makefile.in  acinclude.m4  configure.in
examples/mp2ecat/trunk/src/: .cvsignore  CApplication.cpp  CApplication.h  CCmdLineStart.cpp  CCmdLineStart.h  CDataArray.h  CGetOpt.cpp  CGetOpt.h  mp2ecat.cpp  mp2ecat.pro.in
examples/mp2ecat/trunk/src/includes/: config.h.in
m4/: Makefile.in  acinclude.m4  aclocal.m4  configure.in
python/: CMakeLists.txt  pyproject.toml  setup.py
python/cmake/: FindMEDIO.cmake  FindQt5.cmake
python/conda.recipe/: README.md  meta.yaml
python/src/: ecat.cpp  ecat7.cpp  medio.cpp  pmedio.cpp  pmedio.h  pymedio.cpp  pymedio.h
python/tests/: test.py  test_pmedio.py
scripts/: update_copyright.sh
src/: .cvsignore  CDebug.cpp  CDebug.h  CMakeLists.txt  CMedIO.cpp  CMedIO.h  CMedIOData.cpp  CMedIOData.h  CMedIODataFactory.cpp  CMedIODataFactory.h  CMedIOHeader.cpp  CMedIOHeader.h  libmedio.pro.in
src/ecat/: CECATDirectory.cpp  CECATDirectory.h  CECATDirectoryItem.cpp  CECATDirectoryItem.h  CECATFile.cpp  CECATFile.h  CECATMainHeader.cpp  CECATMainHeader.h  CECATSubHeader.cpp  CECATSubHeader.h
src/ecat/ecat6/: CECAT6MainHeader.cpp  CECAT6MainHeader.h
src/ecat/ecat7/: CECAT7MainHeader.cpp  CECAT7MainHeader.h  CECAT7SubHeaderAttenCorr.cpp  CECAT7SubHeaderAttenCorr.h  CECAT7SubHeaderImage.cpp  CECAT7SubHeaderImage.h  CECAT7SubHeaderNorm.cpp  CECAT7SubHeaderNorm.h  CECAT7SubHeaderNorm3D.cpp  CECAT7SubHeaderNorm3D.h  CECAT7SubHeaderPolarMap.cpp  CECAT7SubHeaderPolarMap.h  CECAT7SubHeaderScan.cpp  CECAT7SubHeaderScan.h  CECAT7SubHeaderScan3D.cpp  CECAT7SubHeaderScan3D.h
src/helpers/: ByteSwap.h  CDate.cpp  CDate.h  CIntVector.cpp  CIntVector.h  CKeyParser.cpp  CKeyParser.h  CKeyParser.h~  CKeyType.h  CKeyValue.cpp  CKeyValue.h  MedIOUnits.cpp  MedIOUnits.h
src/include/: bswap.h  config.h.in  debug.h  scanner.h
src/include/rtdebug/: rtdebug.h
src/include/stubs/: CConcordeFile  CConcordeFrameHeader  CConcordeImage  CConcordeMainHeader  CConcordeMainHeaderImage  CConcordeMainHeaderSinogram  CConcordeSinogram  CECAT6MainHeader  CECAT7MainHeader  CECAT7SubHeaderAttenCorr  CECAT7SubHeaderImage  CECAT7SubHeaderNorm  CECAT7SubHeaderNorm3D  CECAT7SubHeaderPolarMap  CECAT7SubHeaderScan  CECAT7SubHeaderScan3D  CECATDirectory  CECATDirectoryItem  CECATFile  CECATMainHeader  CECATSubHeader  CMedIO  CMedIOData  CMedIODataFactory  CMedIOHeader  CNIFTI1MainHeader  CNIFTI2MainHeader  CNIFTIFile  CNIFTIMainHeader  CPhilipsBinFile  CPhilipsDirectory  CPhilipsDirectoryItem  CPhilipsExtendedMainHeader  CPhilipsFile  CPhilipsMainHeader  CPhilipsSubHeader  CPhilipsSubHeaderImage  CPhilipsSubHeaderSinogram  MedIOUnits
src/micropet/: CConcordeFile.cpp  CConcordeFile.h  CConcordeFrameHeader.cpp  CConcordeFrameHeader.h  CConcordeImage.cpp  CConcordeImage.h  CConcordeMainHeader.cpp  CConcordeMainHeader.h  CConcordeMainHeaderImage.cpp  CConcordeMainHeaderImage.h  CConcordeMainHeaderSinogram.cpp  CConcordeMainHeaderSinogram.h  CConcordeSinogram.cpp  CConcordeSinogram.h  CDate.cpp  CDate.h  CHeaderConcorde.cpp  CHeaderConcorde.h  CHeaderConcordeFrame.cpp  CHeaderConcordeFrame.h  CIntVector.cpp  CIntVector.h
src/nifti/: CNIFTIFile.cpp  CNIFTIFile.h  CNIFTIMainHeader.cpp  CNIFTIMainHeader.h
src/nifti/nifti1/: CNIFTI1MainHeader.cpp  CNIFTI1MainHeader.h
src/nifti/nifti2/: CNIFTI2MainHeader.cpp  CNIFTI2MainHeader.h
src/philips/: CPhilipsBinFile.cpp  CPhilipsBinFile.h  CPhilipsDirectory.cpp  CPhilipsDirectory.h  CPhilipsDirectoryItem.cpp  CPhilipsDirectoryItem.h  CPhilipsExtendedMainHeader.cpp  CPhilipsExtendedMainHeader.h  CPhilipsFile.cpp  CPhilipsFile.h  CPhilipsListviewHeader.cpp  CPhilipsListviewHeader.h  CPhilipsMainHeader.cpp  CPhilipsMainHeader.h  CPhilipsSubHeader.cpp  CPhilipsSubHeader.h  CPhilipsSubHeaderImage.cpp  CPhilipsSubHeaderImage.h  CPhilipsSubHeaderListmode.cpp  CPhilipsSubHeaderListmode.h  CPhilipsSubHeaderSinogram.cpp  CPhilipsSubHeaderSinogram.h  CPhilipsSubHeaderSyntegra.cpp  CPhilipsSubHeaderSyntegra.h
src/rcpp/: CRECATFile.cpp  CRECATFile.h  CRInterface.cpp  CRInterface.h  RInterface.cpp  RInterface.h
testsuite/: CMakeLists.txt
testsuite/ecat/: CMakeLists.txt  readwritematrix.cpp  readwritematrix.pro  run_test.sh
testsuite/philips/: CMakeLists.txt  readmainheader.cpp  readmainheader.pro  run_test.sh  testCPhilipsFile.cpp  testCPhilipsFile.h  testCPhilipsSubHeaderImage.cpp  testCPhilipsSubHeaderImage.h  testCPhilipsSubHeaderSinogram.cpp  testCPhilipsSubHeaderSinogram.h  testPhilipsFormat.cpp  testPhilipsFormat.pro
(+100 files in other folders)
